--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trofeo de Campeones</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Trofeo de Campeones</h1>
         <div class="match-info">
             <div class="team">
-                <img src="https://placeholder.svg?height=100&width=100" alt="Velez Sarfields" class="team-logo">
+                <img src="https://cuando-juega-edlp.netlify.app/assets/shields/velez.webp" alt="Velez Sarfields" class="team-logo">
                 <h2>Velez Sarfields</h2>
             </div>
             <div class="vs">VS</div>
@@ -29,7 +29,7 @@
             <div id="timer"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
 
