--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="vs">VS</div>
             <div class="team">
-                <img src="https://placeholder.svg?height=100&width=100" alt="Estudiantes de La Plata" class="team-logo">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Escudo_de_Estudiantes_de_La_Plata.svg" alt="Estudiantes de La Plata" class="team-logo">
                 <h2>Estudiantes de La Plata</h2>
             </div>
         </div>
