--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             const timer = document.getElementById('timer');
             const { days, hours, minutes, seconds } = getRemainingTime();
     
-            if (Number(day) === 0) {
+            if (Number(days) === 0) {
                 timer.textContent = `${hours}h ${minutes}m ${seconds}s`;
             }
             
