--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trofeo de Campeones</title>
     <link rel="stylesheet" href="./styles.css">
-    <style>
+   <!-- <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -62,7 +62,7 @@
             font-weight: bold;
             color: #333;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <div class="container">
