--- a/index.html
+++ b/index.html
@@ -5,28 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trofeo de Campeones</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Trofeo de Campeones</h1>
         <div class="match-info">
             <div class="team">
-                <img src="https://cuando-juega-edlp.netlify.app/assets/shields/velez.webp" alt="Velez Sarfields" class="team-logo">
-                <h2>Velez Sarfields</h2>
-            </div>
-            <div class="vs">VS</div>
-            <div class="team">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Escudo_de_Estudiantes_de_La_Plata.svg" alt="Estudiantes de La Plata" class="team-logo">
                 <h2>Estudiantes de La Plata</h2>
             </div>
-        </div>
-        <div class="stadium-info">
-            <h3>Estadio: Estadio Unico Madre de Cuidades</h3>
-            <p>Santiago Del Estero, Argentina</p>
-        </div>
-        <div class="countdown">
-            <h3>Tiempo restante:</h3>
-            <div id="timer"></div>
         </div>
     </div>
     <script type="module" src="./index.js"></script>
