Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trofeo de Campeones</title>
-    <link rel="stylesheet" href="./index.css">
     <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./index.css">
+    <title>Estudiantes Campeón</title>
+  </head>
+  <body>
     <div class="container">
-        <h1>Trofeo de Campeones</h1>
-        <div class="match-info">
-            <span class="campeon">CAMPEÓN</span>
-            <div class="team">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Escudo_de_Estudiantes_de_La_Plata.svg" alt="Estudiantes de La Plata" class="team-logo">
-            </div>
-        </div>
+        <h1 class="title">Trofeo de Campeones</h1>
+        <h1 class="champion">Campeón</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Escudo_de_Estudiantes_de_La_Plata.svg" alt="Estudiantes de La Plata" class="team-logo">
     </div>
     <script type="module" src="./index.js"></script>
-</body>
+  </body>
 </html>
+
+
 
