--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Estudiantes Campeón</title>
   </head>
   <body>
+    <div class="fireworks"></div>
     <div class="container">
         <h1 class="title">Trofeo de Campeones</h1>
         <h1 class="champion">Campeón</h1>
